--- a/waggr/src/App.css
+++ b/waggr/src/App.css
@@ -1,12 +1,18 @@
 .navbar {
-  background-color: white;
+  background-color: teal;
   overflow: hidden;
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 3rem; 
+  z-index: 99; 
+  display: flex; 
+  justify-content: space-around;
+
 }
 
 
 div#header-div {
   padding: 13px;
 }
+
